使用 Colaboratory 建立

--- a/20230727_myData_try.ipynb
+++ b/20230727_myData_try.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZp5TsisiBtqa1+c83PrhC",
+      "authorship_tag": "ABX9TyOSiHYO/It9Vets0z3pCqEi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,28 +90,13 @@
       "source": [
         "myList = np.array(df2)\n",
         "# myList\n",
-        "myList.shape"
+        "# myList.shape"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mB2zcXgeQCCT",
-        "outputId": "b4f0063c-6d3e-49e5-9256-8b903cc463f5"
+        "id": "mB2zcXgeQCCT"
       },
-      "execution_count": 120,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(68, 40)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 120
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -174,6 +159,7 @@
         "# 設置長條圖參數\n",
         "#rows = ['Row 1', 'Row 2', 'Row 3', 'Row 4']  # 每一列的標籤\n",
         "rows = df.iloc[:, 0]\n",
+        "\n",
         "# columns = ['A', 'B', 'C']  # 每一行的標籤\n",
         "columns = df2.columns.tolist()\n",
         "\n",
@@ -206,7 +192,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 維度轉換\n",
+        "# 維度轉換 範例\n",
         "# 二維陣列\n",
         "two_dim_array = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9]])\n",
         "\n",
@@ -220,17 +206,6 @@
         "id": "DceShgV_g0CT"
       },
       "execution_count": 137,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "one_dim_array_ravel"
-      ],
-      "metadata": {
-        "id": "tDts-pxJg-GO"
-      },
-      "execution_count": null,
       "outputs": []
     },
     {
