使用 Colaboratory 建立

--- a/20230727_myData_try.ipynb
+++ b/20230727_myData_try.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3iGIFYonpqjA7TCWrj9bR",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNa2Djv5l1f0sg8BVKXeHuV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 20230726 颱風假\n",
+        "\n",
         "# 練習myData圖形繪製\n",
         "\n"
       ],
@@ -100,6 +103,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 熱力圖"
+      ],
+      "metadata": {
+        "id": "izBukWGB7C9A"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 創建熱力圖\n",
@@ -162,6 +174,15 @@
       },
       "execution_count": 68,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 繪製分佈圖"
+      ],
+      "metadata": {
+        "id": "idR2dPm17KCj"
+      }
     },
     {
       "cell_type": "code",
@@ -283,7 +304,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 網路舉例\n",
+        "# 網路舉例\n",
         "\n",
         "```\n",
         "\n",
