使用 Colaboratory 建立

--- a/20230728_myData_try.ipynb
+++ b/20230728_myData_try.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6eWbCEz3ExnGyvY417UNT",
+      "authorship_tag": "ABX9TyPBAp7KTG3RrEYFhqfMxxpv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 495,
+      "execution_count": 12,
       "metadata": {
         "id": "jDYOjgLsGZte"
       },
@@ -57,7 +57,7 @@
       "metadata": {
         "id": "FW17F3xxwiAm"
       },
-      "execution_count": 495,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "W-EjQg0kHJS1"
       },
-      "execution_count": 496,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "Dg2_2NDlIHau"
       },
-      "execution_count": 497,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "mB2zcXgeQCCT"
       },
-      "execution_count": 498,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -138,9 +138,9 @@
           "height": 432
         },
         "id": "5OHULk6KU6bH",
-        "outputId": "9f465a8d-648a-4488-caae-e7c8d2481776"
+        "outputId": "2039a087-a24b-4b99-9d90-4c91f6beffd2"
       },
-      "execution_count": 499,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "J8eugXNfZH1I"
       },
-      "execution_count": 500,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "DceShgV_g0CT"
       },
-      "execution_count": 501,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -202,6 +202,7 @@
         "# 繪製分佈圖\n",
         "\n",
         "plt.hist(x, bins=20, edgecolor='y')\n",
+        "# plt.hist(x, bins='auto', edgecolor='y')\n",
         "plt.xlabel('Total %')\n",
         "plt.ylabel('PCS')\n",
         "plt.title('distribution')\n",
@@ -213,9 +214,9 @@
           "height": 472
         },
         "id": "sxFWOFGNfJ9z",
-        "outputId": "627a4844-e291-4c6e-f9f6-6e2ea1987f48"
+        "outputId": "9d0232ea-e688-419d-9cf2-ab9d7e2ef0a8"
       },
-      "execution_count": 502,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,7 +238,7 @@
       "metadata": {
         "id": "Jw64e7qamgjl"
       },
-      "execution_count": 503,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -279,9 +280,9 @@
           "height": 430
         },
         "id": "ZtFM157WlK4p",
-        "outputId": "aa3d5c17-389e-405f-a297-c48856d5b2b5"
+        "outputId": "1b1b9330-9c28-4899-e597-1d688f91005f"
       },
-      "execution_count": 504,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -321,7 +322,7 @@
       "metadata": {
         "id": "9lVcSaIFs5XF"
       },
-      "execution_count": 505,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -344,7 +345,7 @@
       "metadata": {
         "id": "G6Ntx11CuvLT"
       },
-      "execution_count": 506,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -385,9 +386,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mW0p1IOfPyWF",
-        "outputId": "28bcf7bd-c5ae-4065-933f-0a4de1819522"
+        "outputId": "0f274d5b-8e45-47e3-db3b-8f58f8c738ff"
       },
-      "execution_count": 507,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,6 +398,32 @@
             "基板總數:  2720\n",
             "Yield %: 65.81%\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# df2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8pm4Z8N_rgLi",
+        "outputId": "6ea04e91-6d94-4254-83fc-7f5c6f6a364d"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(68, 40)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
         }
       ]
     },
@@ -412,7 +439,7 @@
     {
       "cell_type": "code",
       "source": [
-        "countAll = count(df2)\n",
+        "# 利用迴圈計數存入每一Row List\n",
         "yieldCount = 0\n",
         "yieldList = []\n",
         "r_num = 0\n",
@@ -435,12 +462,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 447
+          "height": 467
         },
         "id": "7ECSOXpftDVK",
-        "outputId": "04cdd295-7f63-40cc-9518-89f7f7737b58"
+        "outputId": "9543093b-32a2-4b27-90e4-cdec1ff9203e"
       },
-      "execution_count": 508,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,9 +491,35 @@
     {
       "cell_type": "code",
       "source": [
+        "len(yieldList)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CD5IBGBmoaqa",
+        "outputId": "a5b30d4c-8ae8-40af-e410-f988f34eefb9"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "40"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# df3 = df2.dropna()  # 剔除dataframe空值\n",
         "\n",
-        "# Plot the Data itself.\n",
+        "# # Plot the Data itself.\n",
         "# plt.plot(df3)\n",
         "\n",
         "# plt.show()\n",
@@ -476,7 +529,7 @@
       "metadata": {
         "id": "yrHDaoQFrLyo"
       },
-      "execution_count": 509,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -553,7 +606,7 @@
       "metadata": {
         "id": "Yh1aFKhuRNG7"
       },
-      "execution_count": 510,
+      "execution_count": 28,
       "outputs": []
     }
   ]
