使用 Colaboratory 建立

--- a/20230728_myData_try.ipynb
+++ b/20230728_myData_try.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP9CWuvnbyFsVav0MYwGPDE",
+      "authorship_tag": "ABX9TyP3s7r4wflxWgkzEGBPjY8U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -448,9 +448,9 @@
           "height": 467
         },
         "id": "7ECSOXpftDVK",
-        "outputId": "020e218d-517e-4ef5-c24b-c1e1538610ac"
+        "outputId": "c330ed4c-b957-429a-ae0c-4a795c7e2698"
       },
-      "execution_count": 152,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +474,7 @@
     {
       "cell_type": "code",
       "source": [
-        "len(yieldList)"
+        "# len(yieldList)"
       ],
       "metadata": {
         "colab": {
